Fixed z-index again

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -35,11 +35,11 @@ a:hover {
 	height: 100vh;
 	width: 100%;
 	background: #fff;
-	z-index: 2;
+	z-index: 3;
 }
 .cge_loader {
 	background: transparent;
-	z-index: 4;
+	z-index: 5;
 }
 .cge_loader img {
 	height: 80vh;
@@ -48,11 +48,11 @@ a:hover {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	z-index: 4;
+	z-index: 5;
 }
 .pace {
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     height: 100vw;
     width: 100vw;
     top: 0;
@@ -92,7 +92,7 @@ a:hover {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     transition: all 0.5s ease;
 }
 .nav {
@@ -355,6 +355,9 @@ a:hover {
 	padding: 40px;
 	text-align: center;
 }
+.about .text-container p {
+	padding: 15px;
+}
 .text-container h1,
 h2 {
 	font-family: 'Montserrat', sans-serif;
@@ -433,10 +436,10 @@ figure:hover {
 .tickets .package_info {
 	color: #fff;
 	width: 90vw;
-  	max-width: 720px;
+  	max-width: 820px;
 	text-align: left;
-	background: rgba(0, 0, 0, 0.7);
-	padding: 40px;
+	background: rgba(0, 0, 0, 0.85);
+	padding: 40px 60px;
 	margin: 0 auto;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
@@ -859,6 +862,12 @@ footer p {
     .navbar .nav-item .nav-link {
     	padding: 0;
     }
+    .contact .cartier-list-container {
+        padding: 10px;
+    }
+    .ticket-button-small {
+        margin-top: 20px;
+    }
 }
 @media only screen and (max-width: 479px){
 	.image-container {
@@ -884,5 +893,8 @@ footer p {
 	}
 	.background_video {
 		left: -50%;
+	}
+	.tickets .package_info {
+		padding: 20px;
 	}
 }
